raw/html5ever-2016-08-25--2016-11-11-04-24-18--2.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./html5ever-2016-08-25
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling html5ever v0.5.4 (file:///root/benchmarks/html5ever-2016-08-25)
time: 0.023; rss: 48MB	parsing
Lines of code:             8210
Pre-expansion node count:  52140
time: 0.000; rss: 48MB	recursion limit
time: 0.000; rss: 48MB	crate injection
time: 0.000; rss: 48MB	plugin loading
time: 0.000; rss: 48MB	plugin registration
time: 0.694; rss: 101MB	expansion
time: 0.000; rss: 101MB	maybe building test harness
time: 0.002; rss: 101MB	maybe creating a macro crate
Post-expansion node count: 163412
time: 0.000; rss: 101MB	checking for inline asm in case the target doesn't support it
time: 0.003; rss: 101MB	complete gated feature checking
time: 0.008; rss: 101MB	early lint checks
time: 0.002; rss: 101MB	AST validation
time: 0.016; rss: 104MB	name resolution
time: 0.012; rss: 113MB	lowering ast -> hir
time: 0.003; rss: 117MB	indexing hir
time: 0.002; rss: 117MB	attribute checking
time: 0.001; rss: 97MB	language item collection
time: 0.002; rss: 97MB	lifetime resolution
time: 0.000; rss: 97MB	looking for entry point
time: 0.000; rss: 97MB	looking for plugin registrar
time: 0.011; rss: 105MB	region resolution
time: 0.001; rss: 105MB	loop checking
time: 0.001; rss: 105MB	static item recursion checking
time: 0.020; rss: 106MB	compute_incremental_hashes_map
time: 0.000; rss: 106MB	load_dep_graph
time: 0.008; rss: 107MB	type collecting
time: 0.000; rss: 107MB	variance inference
time: 0.011; rss: 108MB	coherence checking
time: 0.021; rss: 109MB	wf checking
time: 0.282; rss: 117MB	item-types checking
time: 0.422; rss: 128MB	item-bodies checking
time: 0.000; rss: 128MB	drop-impl checking
time: 0.060; rss: 136MB	const checking
time: 0.006; rss: 136MB	privacy checking
time: 0.001; rss: 136MB	stability index
time: 0.002; rss: 136MB	intrinsic checking
time: 0.002; rss: 136MB	effect checking
time: 0.014; rss: 136MB	match checking
time: 0.011; rss: 131MB	liveness checking
time: 0.021; rss: 131MB	rvalue checking
time: 0.111; rss: 181MB	MIR dump
  time: 0.008; rss: 169MB	SimplifyCfg
  time: 0.014; rss: 171MB	QualifyAndPromoteConstants
  time: 0.020; rss: 171MB	TypeckMir
  time: 0.000; rss: 171MB	SimplifyBranches
  time: 0.004; rss: 171MB	SimplifyCfg
time: 0.046; rss: 171MB	MIR cleanup and validation
time: 0.079; rss: 178MB	borrow checking
time: 0.002; rss: 178MB	reachability checking
time: 0.005; rss: 178MB	death checking
time: 0.006; rss: 178MB	stability checking
time: 0.000; rss: 178MB	unused lib feature checking
time: 0.056; rss: 178MB	lint checking
time: 0.000; rss: 178MB	resolving dependency formats
  time: 0.000; rss: 178MB	NoLandingPads
  time: 0.004; rss: 178MB	SimplifyCfg
  time: 0.009; rss: 178MB	EraseRegions
  time: 0.001; rss: 178MB	AddCallGuards
  time: 0.073; rss: 183MB	ElaborateDrops
  time: 0.000; rss: 183MB	NoLandingPads
  time: 0.007; rss: 182MB	SimplifyCfg
  time: 0.007; rss: 180MB	InstCombine
  time: 0.001; rss: 180MB	Deaggregator
  time: 0.000; rss: 180MB	CopyPropagation
  time: 0.007; rss: 178MB	SimplifyLocals
  time: 0.001; rss: 178MB	AddCallGuards
  time: 0.000; rss: 178MB	PreTrans
time: 0.124; rss: 178MB	MIR optimisations
  time: 0.011; rss: 179MB	write metadata
  time: 0.040; rss: 181MB	translation item collection
  time: 0.005; rss: 181MB	codegen unit partitioning
  time: 0.005; rss: 195MB	internalize symbols
time: 0.268; rss: 195MB	translation
time: 0.000; rss: 195MB	assert dep graph
time: 0.000; rss: 195MB	serialize dep graph
  time: 0.020; rss: 104MB	llvm function passes [0]
  time: 0.012; rss: 106MB	llvm module passes [0]
  time: 0.466; rss: 109MB	codegen passes [0]
  time: 0.000; rss: 109MB	codegen passes [0]
time: 0.537; rss: 109MB	LLVM passes
time: 0.000; rss: 109MB	serialize work products
time: 0.024; rss: 92MB	linking
done
